--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
   "author": "naphzbilly",
   "license": "MIT",
   "dependencies": {
+    "@vitalets/google-translate-api": "^2.4.0",
     "canvas": "^2.2.0",
     "canvas-constructor": "^2.0.1",
     "discord.js": "^11.4.2",
     "express": "^4.16.4",
-    "fs-nextra": "^0.3.7",
-    "moment": "^2.22.2",
+    "fs-nextra": "^0.3.8",
+    "google": "^2.1.0",
+    "google-images": "^2.1.0",
+    "google-translate-api": "^2.3.0",
+    "moment": "^2.23.0",
     "moment-duration-format": "^2.2.2",
-    "nodemon": "^1.18.7",
     "parse-ms": "^2.0.0",
     "sqlite": "^3.0.0",
     "weather-js": "^2.0.0"
