--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "//2": "https://docs.npmjs.com/files/package.json",
   "//3": "updating this file will download and update your packages",
   "name": "aelz",
-  "version": "1.7.0",
-  "description": "Discord Personal Bot",
+  "version": "2.0.0",
+  "description": "Neural Network Discord Bot",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -17,14 +17,14 @@
   "license": "MIT",
   "dependencies": {
     "@vitalets/google-translate-api": "^2.4.0",
+    "brain.js": "^1.6.1",
     "canvas": "^2.2.0",
-    "canvas-constructor": "^2.0.1",
+    "canvas-constructor": "^2.1.0",
     "discord.js": "^11.4.2",
     "express": "^4.16.4",
     "fs-nextra": "^0.3.8",
     "google": "^2.1.0",
     "google-images": "^2.1.0",
-    "google-translate-api": "^2.3.0",
     "moment": "^2.23.0",
     "moment-duration-format": "^2.2.2",
     "parse-ms": "^2.0.0",
