--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "//2": "https://docs.npmjs.com/files/package.json",
   "//3": "updating this file will download and update your packages",
   "name": "aelz",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "Neural Network Discord Bot",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon -e .js"
   },
   "engines": {
     "node": "8.x"
@@ -18,8 +18,6 @@
   "dependencies": {
     "@vitalets/google-translate-api": "^2.4.0",
     "brain.js": "^1.6.1",
-    "canvas": "^2.2.0",
-    "canvas-constructor": "^2.1.0",
     "discord.js": "^11.4.2",
     "express": "^4.16.4",
     "fs-nextra": "^0.3.8",
@@ -28,7 +26,11 @@
     "moment": "^2.23.0",
     "moment-duration-format": "^2.2.2",
     "parse-ms": "^2.0.0",
-    "sqlite": "^3.0.0",
+    "sqlite3": "^4.0.6",
     "weather-js": "^2.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.12.0",
+    "nodemon": "^1.18.9"
   }
 }
